--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ section{
 
 .titre-p {
 
-        text-align: justify;
+        text-align: center;
         padding: 0px 15px;
 }
 
@@ -320,7 +320,7 @@ section{
 
 .titre p {
 
-        text-align: justify;
+        text-align: center;
         padding: 0px 15px;
 }
 
@@ -624,6 +624,11 @@ section{
                 display: block;
         }
 
+        .titre-p {
+
+                text-align: justify;
+        }
+
         .titre-text {
 
                 margin: 0px;
@@ -704,6 +709,10 @@ section{
         
         }
 
+        .titre p {
+
+                text-align: justify;
+        }
 
         .temoignage{
 
@@ -920,7 +929,7 @@ section{
 
         .titre-p {
 
-                text-align: center;
+                text-align: justify;
         }
 
 
@@ -965,7 +974,7 @@ section{
                 margin-top: 0px;
                 text-align: center;     
         }
-        
+
         .expert .contenu{
                 
                 display: flex;
@@ -984,6 +993,11 @@ section{
                 width: 100%;
                 height: 250px;    
         
+        }
+
+        .titre p {
+
+                text-align: justify;
         }
 
         .temoignage{
