--- a/style.css
+++ b/style.css
@@ -554,7 +554,7 @@ section{
         .contenu p:nth-child(2){
         
                 padding: 0px 20px;
-                text-align: start;
+                text-align: justify;
                 color: #fff;
                 font-size: 18px;
                 font-weight: 500;
