--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ section {
     justify-content: center;
     color: #fff;
     text-align: center;
+    padding: 200px 0;
 }
 
 .banniere .contenu {
@@ -222,6 +223,7 @@ section {
 .banniere p {
     font-size: 1.2em;
     margin-bottom: 30px;
+    text-align: justify;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
@@ -519,7 +521,7 @@ section {
     }
     
     .banniere h1 {
-        font-size: 2.5em;
+        font-size: 2em;
     }
     
     .titre-section {
@@ -569,7 +571,7 @@ section {
     }
     
     .banniere h1 {
-        font-size: 2em;
+        font-size: 1.5em;
     }
     
     .banniere p {
